ci: release automation [skip ci]
