# public/swagger.json
@@ -987,7 +987,7 @@
 				"parameters": []
 			}
 		},
-		"/users/v2/audit": {
+		"/v2/users/audit": {
 			"get": {
 				"operationId": "GetAuditRequest",
 				"responses": {
@@ -1048,7 +1048,7 @@
 				]
 			}
 		},
-		"/users/v2/email": {
+		"/v2/users/email": {
 			"get": {
 				"operationId": "GetEmailRequest",
 				"responses": {
@@ -1168,7 +1168,7 @@
 				}
 			}
 		},
-		"/users/v2/forename": {
+		"/v2/users/forename": {
 			"get": {
 				"operationId": "GetForenameRequest",
 				"responses": {
@@ -1278,7 +1278,7 @@
 				}
 			}
 		},
-		"/users/v2/id": {
+		"/v2/users/id": {
 			"get": {
 				"operationId": "GetIdByEMailRequest",
 				"responses": {
@@ -1347,7 +1347,7 @@
 				]
 			}
 		},
-		"/users/v2/login": {
+		"/v2/users/login": {
 			"post": {
 				"operationId": "Login",
 				"responses": {
@@ -1408,7 +1408,7 @@
 				}
 			}
 		},
-		"/users/v2/password": {
+		"/v2/users/password": {
 			"put": {
 				"operationId": "ChangePassword",
 				"responses": {
@@ -1516,7 +1516,7 @@
 				]
 			}
 		},
-		"/users/v2/surname": {
+		"/v2/users/surname": {
 			"get": {
 				"operationId": "GetSurnameRequest",
 				"responses": {
@@ -1626,7 +1626,7 @@
 				}
 			}
 		},
-		"/users/v2/username": {
+		"/v2/users/username": {
 			"get": {
 				"operationId": "GetUsernameRequest",
 				"responses": {
